--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <style>
         body {
             background: url("index_bg.png");
+            background-repeat: no-repeat;
             font-family: "Poppins";
             margin: 0;
             padding: 0;
