--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
         body {
             background: url("index_bg.png");
             background-repeat: no-repeat;
+            background-size: cover;
             font-family: "Poppins";
             margin: 0;
             padding: 0;
