--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -10,6 +10,8 @@
         body {
             font-family: "Poppins";
             background: url("index_bg.png");
+            background-size: cover;
+            background-repeat: no-repeat;
             background-attachment: fixed;
             margin: 0;
             padding: 0;
@@ -156,6 +158,7 @@
             .question {
                 width: 100%;
                 text-align: center;
+                font-size: 1.5rem;
             }
 
 
@@ -237,7 +240,8 @@
             }
 
             .logo {
-                flex: 0.5;
+                flex: 1;
+                margin: 5% auto;
             }
 
             .center-text {
@@ -263,6 +267,7 @@
                 gap: 20px;
                 width: 100%;
                 text-align: center;
+                font-size: 1.4rem;
             }
 
             select {
@@ -292,13 +297,13 @@
         }
 
         .sonata-logo {
-            width: 35%;
+            width: 50%;
             height: auto;
             margin: 5% auto;
         }
 
         .parity-logo {
-            width: 50%;
+            width: 80%;
             height: auto;
             margin: 5% auto;
         }
