--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,13 @@
     <style>
         body {
             background: url("index_bg.png");
-            background-repeat: no-repeat;
             background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            width: 100vw;
+            height: 120vh;
+            overflow-x: hidden;
+            background-repeat: no-repeat;
             font-family: "Poppins";
             margin: 0;
             padding: 0;
@@ -53,13 +58,14 @@
         .container {
             display: flex;
             background-color: white;
-            align-items: center;
-            justify-content: center;
             flex-direction: column;
+            position: absolute;
             width: 70%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             padding: 20px;
             border-radius: 20px;
-            margin: auto;
             margin-bottom: 50px;
         }
 
@@ -106,7 +112,6 @@
 
             .title {
                 font-size: 40px;
-
             }
 
             .text {
@@ -114,7 +119,8 @@
             }
 
             .logo {
-                flex: 0.5;
+                flex: 1;
+                margin: 5%;
             }
 
             .center-text {
