--- a/views/consent.ejs
+++ b/views/consent.ejs
@@ -10,6 +10,8 @@
         body {
             background: url("consent_bg.png");
             background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             font-family: "Poppins";
             margin: 0;
             padding: 0;
@@ -49,8 +51,12 @@
         }
 
         .container {
-            background: #e6e6e6;
+            position: absolute;
             width: 50%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: #e6e6e6;
             display: flex;
             flex-direction: column;
             padding: 5%;
@@ -112,7 +118,8 @@
             }
 
             .logo {
-                flex: 0.5;
+                flex: 1;
+                margin: 5%;
             }
 
             .center-text {
@@ -169,8 +176,8 @@
             <label>I have read and understood the information provided in this consent form but choose not to
                 participate in the employee inclusion survey</label>
         </div>
-        <a href=<%= sonataForm %>>Consent Form</a>
-        <a href=<%= parityForm %>>Parity Consulting's Data Privacy and Protection Agreement</a>
+        <a href=<%=sonataForm %>>Consent Form</a>
+        <a href=<%=parityForm %>>Parity Consulting's Data Privacy and Protection Agreement</a>
         <div class="btnContainer">
             <button onclick="redirect()">Next</button>
         </div>
