--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,12 +110,16 @@
                 text-align: justify;
             }
 
+            .container {
+                width: 80%;
+            }
+
             .title {
                 font-size: 40px;
             }
 
             .text {
-                font-size: 15px;
+                font-size: 25px;
             }
 
             .logo {
@@ -128,13 +132,13 @@
             }
 
             .sonata-logo {
-                width: 60%;
+                width: 80%;
                 height: auto;
                 margin: 5% auto;
             }
 
             .parity-logo {
-                width: 80%;
+                width: 100%;
                 height: auto;
                 margin: 5% auto;
             }
@@ -146,9 +150,9 @@
             }
 
             button {
-                font-size: 20px;
+                font-size: 25px;
                 width: 120px;
-                height: 50px;
+                height: 60px;
             }
         }
     </style>
