--- a/views/consent.ejs
+++ b/views/consent.ejs
@@ -114,7 +114,8 @@
         @media screen and (max-width: 1020px) {
 
             .container {
-                font-size: 18px;
+                font-size: 25px;
+                width: 70%;
             }
 
             .logo {
@@ -124,19 +125,23 @@
 
             .center-text {
                 flex: 1;
-                font-size: 20px;
+                font-size: 25px;
             }
 
             .sonata-logo {
-                width: 60%;
+                width: 80%;
                 height: auto;
                 margin: 5% auto;
             }
 
             .parity-logo {
-                width: 80%;
+                width: 100%;
                 height: auto;
                 margin: 5% auto;
+            }
+
+            input[type="radio"] {
+                height: 20px;
             }
 
             .btnContainer {
