--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -89,8 +89,9 @@
         .options {
             width: 50%;
             text-align: center;
-            display: inline-block;
             justify-content: center;
+            display: flex;
+            flex-direction: row;
         }
 
         label::before {
@@ -100,6 +101,18 @@
 
         select {
             width: 50%;
+        }
+
+        .sonata-logo {
+            width: 50%;
+            height: auto;
+            margin: 5% auto;
+        }
+
+        .parity-logo {
+            width: 80%;
+            height: auto;
+            margin: 5% auto;
         }
 
         textarea {
@@ -147,6 +160,48 @@
             accent-color: black;
         }
 
+        header {
+            color: #000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+        }
+
+        .logo {
+            flex: 1;
+            display: flex;
+            align-items: center;
+        }
+
+        .center-text {
+            flex: 2;
+            text-align: center;
+            font-size: 25px;
+            font-weight: 600;
+        }
+
+        .button {
+            color: #000000;
+            cursor: pointer;
+            border: none;
+            text-align: center;
+            font-family: Montserrat;
+            font-size: 25px;
+            font-weight: 600;
+            border-radius: 20px;
+            width: 120px;
+            height: 60px;
+            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            margin: 10px auto;
+            display: block;
+        }
+
+        .button:hover {
+            background-color: orange;
+            color: white
+        }
+
 
 
         @media only screen and (max-width: 1200px) {
@@ -158,34 +213,34 @@
             .question {
                 width: 100%;
                 text-align: center;
-                font-size: 1.5rem;
+                font-size: 1.8rem;
             }
-
 
             textarea {
                 width: 96%;
+                height: 100px;
                 text-align: center;
-                margin: 2% auto;
+                margin: 4% auto;
             }
 
             input[value="Strongly Agree"],
             input[value="Strongly Disagree"] {
-                width: 25px;
-                height: 25px;
+                width: 30px;
+                height: 30px;
             }
 
             input[value="Agree"],
             input[value="Disagree"] {
-                width: 18px;
-                height: 18px;
+                width: 25px;
+                height: 25px;
                 align-items: center;
                 justify-content: center;
                 vertical-align: middle;
             }
 
             input[value="Neutral"] {
-                width: 15px;
-                height: 15px;
+                width: 20px;
+                height: 20px;
             }
 
             .label-container {
@@ -241,21 +296,22 @@
 
             .logo {
                 flex: 1;
-                margin: 5% auto;
+                margin: 5%;
             }
 
             .center-text {
                 flex: 1;
+                font-size: 30px;
             }
 
             .sonata-logo {
-                width: 60%;
+                width: 80%;
                 height: auto;
                 margin: 5% auto;
             }
 
             .parity-logo {
-                width: 80%;
+                width: 100%;
                 height: auto;
                 margin: 5% auto;
             }
@@ -267,81 +323,18 @@
                 gap: 20px;
                 width: 100%;
                 text-align: center;
-                font-size: 1.4rem;
+                font-size: 1.6rem;
             }
 
             select {
                 margin: 2% auto;
                 width: 50%;
-                height: 25px;
-            }
-
-            select:hover {
-                accent-color: #78326e;
+                height: 40px;
+                font-size: 20px;
             }
         }
     </style>
     <style>
-        header {
-            color: #000;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px;
-        }
-
-        .logo {
-            flex: 1;
-            display: flex;
-            align-items: center;
-        }
-
-        .sonata-logo {
-            width: 50%;
-            height: auto;
-            margin: 5% auto;
-        }
-
-        .parity-logo {
-            width: 80%;
-            height: auto;
-            margin: 5% auto;
-        }
-
-        .center-text {
-            flex: 2;
-            text-align: center;
-            font-size: 25px;
-            font-weight: 600;
-        }
-
-        .options {
-            display: flex;
-            flex-direction: row;
-        }
-
-
-        .button {
-            color: #000000;
-            cursor: pointer;
-            border: none;
-            text-align: center;
-            font-family: Montserrat;
-            font-size: 25px;
-            font-weight: 600;
-            border-radius: 20px;
-            width: 120px;
-            height: 60px;
-            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-            margin: 10px auto;
-            display: block;
-        }
-
-        .button:hover {
-            background-color: orange;
-            color: white
-        }
-
         /* .options input[type="radio"] {
             margin-left: 10px;
             /* Adjust the margin as needed /
