--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -73,6 +73,7 @@
       text-align: center;
     }
 
+
     .centered-text {
       text-align: center;
     }
@@ -157,7 +158,7 @@
 
       #centered-div {
         width: 50%;
-        height: 250px;
+        height: 30%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -168,7 +169,7 @@
       }
 
       .fade-in {
-        font-size: 100%;
+        font-size: 200%;
         text-align: center;
       }
     }
