--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -162,6 +162,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        transform: translateY(-20%);
       }
 
       .typewriter {
